--- a/pantheon.upstream.yml
+++ b/pantheon.upstream.yml
@@ -5,7 +5,10 @@
 api_version: 1
 php_version: 8.0
 
+
 # See https://pantheon.io/docs/pantheon-yml#specify-a-version-of-mariadb
+database:
+  version: 10.4
 
 # See https://pantheon.io/docs/pantheon-yml/#enforce-https--hsts for valid values.
 enforce_https: transitional
